# simulator-benchmark

./: .gitignore  app.py  pyproject.toml
.streamlit/: config.toml
data/: grover_1x-A30-GPU_Quantuloop-Dense-(f32).json  grover_1x-A30-GPU_Quantuloop-Dense-(f64).json  grover_1x-A30-GPU_Quantuloop-QuEST.json  grover_1x-A30-GPU_Quantuloop-Sparse-(f32).json  grover_1x-A30-GPU_Quantuloop-Sparse-(f64).json  grover_2x-A30-GPU_Quantuloop-Dense-(f32).json  grover_2x-A30-GPU_Quantuloop-Dense-(f64).json  grover_2x-A30-GPU_Quantuloop-Sparse-(f32).json  grover_2x-A30-GPU_Quantuloop-Sparse-(f64).json  grover_g4dn.xlarge_Quantuloop-Dense-(f32).json  grover_g4dn.xlarge_Quantuloop-Dense-(f64).json  grover_g4dn.xlarge_Quantuloop-QuEST.json  grover_g4dn.xlarge_Quantuloop-Sparse-(f32).json  grover_g4dn.xlarge_Quantuloop-Sparse-(f64).json  grover_g5.xlarge_Quantuloop-Dense-(f32).json  grover_g5.xlarge_Quantuloop-Dense-(f64).json  grover_g5.xlarge_Quantuloop-QuEST.json  grover_g5.xlarge_Quantuloop-Sparse-(f32).json  grover_g5.xlarge_Quantuloop-Sparse-(f64).json  grover_p3.2xlarge_Quantuloop-Dense-(f32).json  grover_p3.2xlarge_Quantuloop-Dense-(f64).json  grover_p3.2xlarge_Quantuloop-QuEST.json  grover_p3.2xlarge_Quantuloop-Sparse-(f32).json  grover_p3.2xlarge_Quantuloop-Sparse-(f64).json  phase_1x-A30-GPU_Quantuloop-Dense-(f32).json  phase_1x-A30-GPU_Quantuloop-Dense-(f64).json  phase_1x-A30-GPU_Quantuloop-QuEST.json  phase_1x-A30-GPU_Quantuloop-Sparse-(f32).json  phase_1x-A30-GPU_Quantuloop-Sparse-(f64).json  phase_2x-A30-GPU_Quantuloop-Dense-(f32).json  (+33 more)
src/quantuloop_benchmark/: grover.py  (+3 more)
